--- a/src/index.html
+++ b/src/index.html
@@ -240,8 +240,8 @@ A marcar...
     card.className = "card";
 
     // usa cor se existir, senão aplica cinza claro
-    const bgColor = ev.color || "#f0f0f0";
-    const borderColor = ev.color || "#ccc";
+    const bgColor = ev.cor || "#f0f0f0";
+    const borderColor = ev.cor || "#ccc";
 
     card.innerHTML = `
       <div class="date">
